<resources>
    <string name="app_name">EvaluacionT1_JF_AG</string>
    <string name="seleccionar_moneda">Seleccionar Moneda</string>
    <string name="contrase_a">Contraseña</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="registro">Registro</string>
    <string name="inicio_de_sesion">Inicio de Sesion</string>
    <string name="fondo">fondo</string>
    <string name="sumasapiens">SumaSapiens</string>
    <string name="email">email</string>
    <string name="nombre">nombre</string>
    <string name="a_adir_contacto">Añadir contacto</string>
    <string name="mas">+</string>
    <string name="buscar">Buscar</string>
    <string name="borrar">Borrar</string>
    <string name="crear_gasto_conjunto">Crear gasto conjunto</string>
    <string name="importe">Importe</string>
    <string name="correo_1_s">Correo: %1$s</string>
    <string name="nombre_mayus">Nombre</string>
    <string name="moneda_1_s">Moneda: %1$s</string>
    <string name="seleccione_los_contactos">Seleccione los contactos</string>
    <string name="siguiente">Siguiente</string>
    <string name="resultado">Resultado</string>
    <string name="el_importe_total_a_pagar_por_persona_es_de">El importe total a pagar por persona es de ...</string>


</resources>