<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/fto_2"
    tools:context=".Registro">

    <Spinner
        android:id="@+id/spinnerTipoMoneda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextContrasena"
        android:backgroundTint="#00BCD4"
        android:background="#cc000000"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_margin="64dp"
        android:popupBackground="#FFFFFF"
        android:prompt="@string/seleccionar_moneda"
        android:spinnerMode="dropdown"
        android:textColor="#00BCD4"
        android:textColorHint="#00BCD4"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/buttonLimpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00BCD4"
            android:text="@string/limpiar"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00BCD4"
            android:text="@string/guardar"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:layout_marginStart="32dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:background="#cc000000"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#00BCD4"
        android:textColorHint="#00BCD4"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#ffffff"
        android:background="#cc000000"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColor="#00BCD4"
        android:textColorHint="#00BCD4"
        android:textSize="20sp"
        android:textStyle="bold"
        android:autofillHints="" />


    <EditText
        android:id="@+id/editTextContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#FFFFFF"
        android:background="#cc000000"
        android:gravity="center"
        android:layout_below="@id/etNombre"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:textColor="#00BCD4"
        android:layout_marginTop="16dp"
        android:textColorHint="#00BCD4"
        android:textSize="20sp"
        android:textStyle="bold"
        android:autofillHints="" />

</RelativeLayout>
